# Discovery

Discovery/hipda-tui/: Cargo.toml
Discovery/hipda-tui/src/: app.rs  config.rs  constants.rs  http.rs  main.rs  sixel.rs  theme.rs  utils.rs
Discovery/hipda-tui/src/model/: forum.rs  mod.rs  post.rs  simple.rs  thread.rs  user.rs
Discovery/hipda-tui/src/parser/: mod.rs  pre_post.rs  simple_list.rs  thread_detail.rs  thread_list.rs  user.rs
Discovery/hipda-tui/src/ui/: forum_list.rs  mod.rs  post_editor.rs  simple_list.rs  sms.rs  thread_detail.rs  thread_list.rs
